--- a/www/index.html
+++ b/www/index.html
@@ -66,6 +66,7 @@
     <script src="lib/angular-cookies/angular-cookies.min.js"></script>
     <script src="lib/angularLocalStorage/dist/angularLocalStorage.min.js"></script>
     <script src="lib/angularjs-slider/dist/rzslider.min.js"></script>
+    <script src="manual_lib/ng-custom-element/dist/ng-custom-element.js"></script>
     <script src="manual_lib/enketo/enketo-bundle.js"></script>
     <!-- Manually installed javascript for libraries that are not published through bower -->
     <!-- cordova script (this will be a 404 in the browser) -->
@@ -105,6 +106,8 @@
     <script src="js/diary/list.js"></script>
     <script src="js/diary/diary_list_item.js"></script>
     <script src="js/diary/infinite_scroll_trip_item.js"></script>
+    <script type="module" src="js/diary/tripListItem.mjs"></script>
+    <script type="module" src="js/diary/leafletMap.mjs"></script>
     <script src="js/diary/infinite_scroll_place_item.js"></script>
     <script src="js/diary/infinite_scroll_list.js"></script>
     <script src="js/diary/infinite_scroll_detail.js"></script>
